--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
+
+    
  <!DOCTYPE html>
- <html lang="ru">
+ <html lang="en">
  <head>
      <meta charset="UTF-8">
      <title>Document</title>
@@ -803,8 +805,6 @@
     <script>
         $(document).ready(function(){
 
-            //
-            //
             document.title = 'Деловые мероприятия | База отдыха Жемчужина';
 
 
@@ -840,8 +840,8 @@
                 // speed: 300,
                 slidesToShow: 1,
                 slidesToScroll: 1,
-                prevArrow: '.slider__prev',
-                nextArrow: '.slider__next',
+                // prevArrow: '.slider__prev',
+                // nextArrow: '.slider__next',
                 fade: true,
                 cssEase: 'linear',
                 responsive: [
